# action-pytest

./: .gitignore  .prettierignore  README.md  action-pytest.sublime-project  action.yml
.github/workflows/: CI.yml  tests.yml
tests/: pyproject.toml
tests/tests/: test_src.py
